tests/rosetta/out/Java/averages-median-3.error
parse: error[P052]: /workspace/mochi/tests/rosetta/x/Mochi/averages-median-3.mochi:46:33: unexpected token "-1" (expected ")")
  --> /workspace/mochi/tests/rosetta/x/Mochi/averages-median-3.mochi:46:33

 46 |     return (med + qsel(arr, half-1)) / 2.0
    |                                 ^

help:
  Unbalanced parentheses. Check for missing `(` or `)`.